create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1825,16 +1825,17 @@ body {
   }
 }
 .cid-qycqHPSTKZ .mbr-section-title {
-  color: #ffffff;
+  color: #f7ed4a;
   text-align: left;
 }
 .cid-qycqHPSTKZ .mbr-text,
 .cid-qycqHPSTKZ .mbr-section-btn {
   text-align: left;
+  color: #f9f295;
 }
 .cid-qycqHPSTKZ .mbr-text,
 .cid-qycqHPSTKZ .mbr-section-btn I {
-  color: #ffffff;
+  color: #f7ed4a;
 }
 .cid-qycdFR4s9T {
   padding-top: 90px;
@@ -1877,12 +1878,12 @@ body {
 }
 .cid-qycvaEfQI7 .mbr-section-title {
   text-align: left;
-  color: #ffffff;
+  color: #f7ed4a;
 }
 .cid-qycvaEfQI7 .mbr-text,
 .cid-qycvaEfQI7 .mbr-section-btn {
   text-align: left;
-  color: #e4d295;
+  color: #f7ed4a;
 }
 .cid-qy7pslpFXM {
   padding-top: 60px;
