--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1826,7 +1826,7 @@ body {
   }
 }
 .cid-qycqHPSTKZ .mbr-section-title {
-  color: #ffffff;
+  color: #f9f295;
   text-align: left;
 }
 .cid-qycqHPSTKZ .mbr-text,
@@ -1879,7 +1879,7 @@ body {
 }
 .cid-qycvaEfQI7 .mbr-section-title {
   text-align: left;
-  color: #ffffff;
+  color: #f7ed4a;
 }
 .cid-qycvaEfQI7 .mbr-text,
 .cid-qycvaEfQI7 .mbr-section-btn {
